// Extracted from: Spotify 1.2.52.442 (windows)

syntax = "proto2";

package spotify.player.proto;

option optimize_for = CODE_SIZE;

message LoggingParams {
    optional int64 command_initiated_time = 1;
    optional int64 command_received_time = 2;
    repeated string page_instance_ids = 3;
    repeated string interaction_ids = 4;
    optional string device_identifier = 5;
    optional string command_id = 6;
}
